Update services section.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Russo+One&family=Train+One&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/3596f02005.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
